--- a/releases/airflow-dev.yml
+++ b/releases/airflow-dev.yml
@@ -8,7 +8,7 @@ metadata:
 spec:
   releaseName: airflow-dev
   chart:
-    repository: https://PedroSimasNeto.github.io/airflow-eks-helm-chart
+    repository: https://github.com/PedroSimasNeto/airflow-eks-helm-chart.git
     name: airflow
     version: 1.0.0
   values:
